Fixed spacing for tabs

--- a/styles/style-v2_16.css
+++ b/styles/style-v2_16.css
@@ -114,7 +114,7 @@ hr{
     #discord_link_tab{
         position: absolute;
         transform: rotate(-90deg);
-        top: 97px;
+        top: 98px;
         right: -56px;
         background-color: #363c44;
         padding: 5px;
@@ -143,7 +143,7 @@ hr{
         position: absolute;
         transform: rotate(-90deg);
         top: 193px;
-        right: -61px;
+        right: -60px;
         background-color: #363c44;
         padding: 5px;
         cursor: pointer;
